# shinespark

./: .env  .env.dev  .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  rustfmt.toml
apiclient/: identity.http  identity_google.http  identity_jwt.http  identity_session.http
configs/: application.toml  default.toml  shinespark-dev.env  shinespark-local.toml  shinespark.env  shinespark.toml  test.toml
configs/dev/: default.toml
configs/test/: default.toml
deploy/: docker-compose.yml
docs/: 01. setup.md  02. config.md  04. rbac.md  archi.md  identity.md  migration.md  oltp.md  setup.md
docs/maps/: CONVENTIONS.md  MAINTENANCE.md  _index.md  admin-ui.md  architecture.md  feature-lifecycle.md  http-layer.md
docs/maps/crates/: shinespark-app.md  shinespark-core.md  shinespark-identity.md
docs/maps/domain/: identity-repositories.md  identity-sql.md  identity-usecases.md
docs/plan/: 20240418_oauth2.md  20240418_oauth2_plan.md  20240418_rbac_plan.md  20260401_jwt_plan.md  20260418_jwt.md  20260423_01_db_mq.md  20260423_01_db_mq_plan.md  20260426_minijinja_plan.md  login-page.md
logs/: shinespark.log.2026-02-17
migrations/: 20260217101824_init.sql  20260221080021_simple_exam.sql  20260222133736_add_identity_data.sql  20260329082358_init_identity.sql  20260418000000_jwt_refresh_token.sql  20260423000000_shs_mq_messages.sql
shinespark/: Cargo.toml
shinespark-app/: Cargo.toml
shinespark-app/src/: http.rs  main.rs  routes.rs
shinespark-app/src/http/: api_response.rs  cookie_jwt.rs  extractors.rs  jwt.rs  middleware.rs  routes.rs  session.rs  template.rs
shinespark-grpc/: Cargo.toml  build.rs  run.md
shinespark-grpc/src/: client.rs  server.rs
shinespark-identity/: Cargo.toml
shinespark-identity/sql/jwt_repository/: delete_by_user_uid.sql  find_refresh_token.sql  save_refresh_token.sql
shinespark-identity/sql/rbac_repository/: add_permission_to_role.sql  assign_role_to_user.sql  create_permission.sql  create_role.sql  delete_permission.sql  delete_role.sql  delete_role_permissions_by_permission_id.sql  delete_role_permissions_by_role_id.sql  delete_user_roles_by_role_id.sql  find_permission_by_code.sql  find_role_by_name.sql  list_permissions.sql  list_roles.sql  load_role_permissions.sql  remove_permission_from_role.sql  remove_role_from_user.sql
shinespark-identity/sql/user_repository/: create_identity.sql  create_user.sql  delete_user.sql  find_user.sql  find_user_by_identity.sql  update_user.sql
shinespark-identity/src/: entities.rs  entity.rs  infra.rs  lib.rs  repositories.rs  repository.rs  service.rs  service_todo.rs  services.rs  usecase.rs  usecases.rs
shinespark-identity/src/infra/: default_google_login_usecase.rs  default_jwt_ident_usecase.rs  default_login_usecase.rs  default_rbac_service.rs  default_rbac_usecase.rs  default_user_service.rs  default_user_usecase.rs  jwt_service.rs  mock_user_repository.rs  seed_user.rs  sqlx_composer.rs  sqlx_jwt_ident_repository.rs  sqlx_rbac_repository.rs  sqlx_statement.rs  sqlx_user_repository.rs  user_repository_impl.rs
shinespark-identity/src/repositories/: jwt_ident_repository.rs  rbac_repository.rs  user_repository.rs
shinespark-identity/src/repository/: composer.rs  default_query_filter.rs  default_user_repository.rs  query.rs  query_filter_ext.rs  user_repository.rs
shinespark-identity/src/service/: auth_service.rs  default_auth_service.rs  default_rbac_service.rs  default_user_service.rs  rbac_service.rs  user_service.rs
shinespark-identity/src/services/: user_service.rs
shinespark-identity/src/usecases/: jwt_ident_usecase.rs  login_usecase.rs  rbac_usecase.rs  social_login_usecase.rs  user_usecase.rs
shinespark-mod-base/: Cargo.toml
shinespark-mod-base/src/: entity.rs  infra.rs  lib.rs  repository.rs  service.rs  usecase.rs
shinespark-mod-base/src/service/: simple_service.rs  simple_service_impl.rs
shinespark-mod-base/src/usecase/: simple_usecase.rs
shinespark/src/: config.rs  crypto.rs  db.rs  error.rs  http.rs  lib.rs  logging.rs  observability.rs  trace.rs  util.rs
shinespark/src/db/: handle.rs  repository.rs
shinespark/src/http/: middleware.rs
shinespark/src/http/middleware/: responsemapperlayer.rs
shinespark/src/mq/: mod.rs  pg.rs
shinespark/tests/: trace_interop.rs
shinespark_app/: Cargo.toml
shinespark_app/src/: main.rs
sqls/: Query.sql
templates/: base.html  index.html
templates/auth/: login.html
