[package]
name = "shinespark-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
shinespark = { path = "../shinespark", features = ["db-driver-postgres"] }
shinespark-identity = { path = "../shinespark-identity" }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "sqlite"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tower-sessions = "0.15.0"
anyhow = "1.0.102"
async-trait = "0.1.89"
uuid = { version = "1.23.0", features = ["v4"] }
tower = { version = "0.5.3", features = ["tracing"] }
tower-http = { version = "0.6.8", features = ["full"] }
nanoid = "0.5.0"
minijinja = { version = "2", features = ["loader"] }
axum-extra = { version = "0.10", features = ["cookie"] }
time = "0.3"
