[package]
name = "shinespark-grpc"
version = "0.1.0"
edition = "2024"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "hello-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "hello-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-reflection = "0.14.5"
anyhow = "1.0.102"

[build-dependencies]
tonic-prost-build = "*"
