[package]
name = "shinespark-identity"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
shinespark = { path = "../shinespark", features = ["db-driver-postgres"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "mysql",
    "sqlite",
    "uuid",
    "chrono",
] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
dotenvy = "0.15.7"
anyhow = "1.0.102"
serde_json = "1.0.149"
jsonwebtoken = "9"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
