[package]
name = "shinespark"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std"] }
config = "0.15.22"
dotenvy = "0.15.7"
password-hash = { version = "0.6.0", features = ["getrandom", "rand_core"] }
pbkdf2 = { version = "0.12.2", features = ["simple", "std"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
serial_test = "3.4.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
