[package]
name = "shinespark"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = "0.8.8"
config = "0.15.22"
dotenvy = "0.15.7"
futures-core = "0.3.32"
password-hash = { version = "0.6.0", features = ["getrandom", "rand_core"] }
pbkdf2 = { version = "0.12.2", features = ["simple", "std"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
serial_test = "3.4.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[features]
# 기본값은 postgres로 설정합니다.
default = ["postgres"]

# 각 피처가 활성화될 때 sqlx의 해당 드라이버 피처도 켜지도록 합니다.
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
